<resources>
    <string name="app_name" translatable="false">Monitor</string>
    <string name="main_button_edytuj_cats_title">Cats</string>
    <string name="main_button_edytuj_logs_title">Logs</string>
    <string name="main_message_no_data_to_show">No data to show</string>
    <string name="settings_show_notification_title">Show notification</string>
    <string name="settings_dark_theme_title">Dark Theme</string>
    <string name="settings_help_title">Help</string>
    <string name="settings_warning_disabling_notification">Disabling the notification will make it impossible to start/stop activity tracking. Do you wish to disable it?</string>
    <string name="textual_data_total_time">Total time</string>
    <string name="textual_data_peak_day">Peak day</string>
    <string name="textual_data_standard_deviation">Standard deviation</string>
    <string name="textual_data_average_daily">Average daily</string>
    <string name="help_dialog_header">Help</string>
    <string name="help_topic_getting_started">Getting Started</string>
    <string name="help_topic_general">General</string>
    <string name="help_topic_cats">CATS</string>
    <string name="help_topic_logs">LOGS</string>
    <string name="dialog_button_save">save</string>
    <string name="dialog_button_cancel">cancel</string>
    <string name="dialog_button_help">help</string>
    <string name="logs_dialog_error_no_cat_selected">Select a category.</string>
    <string name="logs_dialog_error_start_time_not_before_end_time">Start time must be before end time.</string>
    <string name="logs_dialog_spinner_default_text">select a category…</string>
    <string name="editor_layout_button_clear">clear</string>
    <string name="editor_layout_button_change">change</string>
    <string name="editor_layout_button_add">add</string>
    <string name="editor_layout_button_delete">delete</string>
    <string name="cats_dialog_hint_title">title</string>
    <string name="cats_dialog_hint_initial">initial</string>
    <string name="graph_title_recent_days">in recent days</string>
    <string name="graph_title_24h_distribution">24 hours distribution</string>
    <string name="graph_title_weekly_distribution">days of week distribution</string>
    <string name="confirmation_dialog_title">Confirmation required</string>
    <string name="confirmation_dialog_negative_button">cancel</string>
    <string name="confirmation_dialog_positive_button">confirm</string>
    <string-array name="spinner_titles">
        <item>custom</item>
        <item>all time</item>
        <item>3 months</item>
        <item>30 days</item>
        <item>7 days</item>
        <item>yesterday</item>
        <item>today only</item>
    </string-array>
    <string name="help_universal_getting_started">
        Welcome to Monitor![p]Monitor helps you track your activities and provides a bunch of charts and stats regarding the categories of activity you\'ve defined.[/p]

        First TODO:[p]In order to start using the app, you need to define categories of activities, eg. Studying, Training, Social media. For each of the categories, you also need to define
        a short name - such that fits well when there is little space, best an initial or a single emoji. So for example Training would get a T. The short names/initials you define will be shown on the app\'s notification
        that\'s why it\'s best to restrict them to a single letter - you may need to fit many of those. Tap CATS button in the app and an interface will pop up letting you add categories: title, initial
        then click the plus button right next to them to add the category. Once you\'re done adding all of them - remember to tap SAVE button! Nothing is going to be saved without your permission, that\'s why it is important.[/p]

        Using the app[p]Once you\'ve defined the categories and their initials, you can close the app and start using it. When you start doing one of the things you\'ve added as categories, you just tap the initial
        of that category on the app\'s notification. When you\'re done - tap it again. The app will then save a log of your activity - it\'s start time, end time and category.[/p]
    </string>
    <string name="help_universal_general">
        Pie chart[p]The grand pie chart is not just for show. You can tap any slice on it, thus selecting it. Once you do, only the data regarding that slice - the category of activity it represents,
        will be displayed on the other charts and in the stats below. When the chart shows a no-data message - it means there is no data to be shown in the selected date range.[/p]

        Date range[p]Data displayed on app\'s charts is bound by the range selected. By default the range is set to \"today only\" on the first day the app is being used, and \"3 months\" later on.
        It\'s important to realize that the range is inclusive at the start but exclusive at the end. It is because date selected means 00:00 time of day on that date. You can change the range either by using predefined
        values in the spinner under the pie chart (most of which don\'t include the current day - this is to ensure comparing apples to apples, rather than a full previous day to say 10 first hours of the current one),
        or by tapping dates below the spinner. In order to encompass the current day, set the end of the range to the beginning of the next day.[/p]

        Recent days chart[p] The second chart, under the pie, represents activity time on consecutive days within the range selected. It will, however, trim the past and start with the first day in range where there was any logged activity.
        Values are by design relative, just for visual comparison, but for convenience a scale replacement is available: tap at a given level within the graph and a horizontal line will appear along with a value in hours:minutes format
        at that level.[/p]

        Weekly distribution chart[p]Similar to the 24 hour distribution above it, the \"days of week distribution\" chart shows how days of week compare in terms of time of activity. Chart, starting with Monday,
        represents 7 days of week with relative time of activity in each of them, on average, within date range set as well as respecting selection(or lack thereof) on the pie chart.[/p]
    </string>
    <string name="help_universal_cats">
        Categories[p]CATS stands for categories. They are basically the kinds of activities to track. Playing sports, Shopping, Running, Gaming - anything that takes time and you might want to know how much of your
        time you spend on it.
        On the list in the CATS editor, they appear in the following format: initial, title, active/inactive check box[/p]

        Cats editor[p] When you press the CATS button in the app, CATS editor will open up. In the editor you can add, reorder, delete and activate/deactivate categories. Any changes made require tapping SAVE button in order to be saved[/p]

        Adding categories[p] In Cats editor, tap on the top left text field, type the title of the category you wish to add, then move to the next text field and assign an initial to the category - a single letter representation of the category (you can also use an emoji).
        The initial will later appear on the notification. After adding both the title and the initial, press the plus button right next to the text fields. You can repeat the above to add further categories.
        Once you\'ve added all categories you wanted, be sure to tap SAVE button.[/p]

        Initials[p] Initials are short names for the categories, preferably a single letter. They are displayed on the notification, where they represent the categories they were assigned to.
        When you tap the initial (on the notification), the app will take it as a signal that you\'ve started an activity in a given category. Tap it again when you stop.[/p]

        Changing an initial[p] If you wish to change an initial for an existing category, slide the category off the screen, then add it anew with a new initial. Remember to tap SAVE button to persist the change.[/p]

        Active/Inactive cats[p] You can deactivate a category by unchecking the check box next to them in the CATS editor. The inactive category will be shown on the charts but not on the notification - freeing up some space there.
        Just like any other change in Cats editor, it requires tapping SAVE in order to be applied and remembered by the app.[/p]

        Deleting cats[p] In order to delete a category, slide it off the screen in CATS editor. Once you\'re done deleting unwanted categories, remember to press SAVE, otherwise the changes will be discarded. Deleted cats
        are no longer visible on the charts nor in the CATS editor. The logs of activity related to them however, are not lost. Once the category is re-added, the logs will be visible on the charts again - it just has to have the exact same title.
        The app remembers titles of the deleted categories and will suggest them as you enter a new title in the CATS editor.[/p]

        Reordering cats[p] To reorder categories, long press a category in the CATS editor and move it to it\'s new position on the list. The new order will also appear on the notification once you tap the SAVE button.[/p]
    </string>
    <string name="easy_ui_logs_minihelp_category">Tap on the category selection field, select category from the drop down list.</string>
    <string name="easy_ui_logs_minihelp_start_time">Select time when the activity began. Touch time, hours and minutes, to change time. Tap date if you need to change it too.</string>
    <string name="easy_ui_logs_minihelp_end_time">Select time when the activity ended. Touch time, hours and minutes, to change time. Tap date if you need to change it too.</string>
    <string name="easy_ui_logs_tv_start_time">Started at:</string>
    <string name="easy_ui_logs_tv_end_time">Ended at:</string>
    <string name="easy_ui_cats_minihelp_title">Name the category of activity. For example: Running, Studying, Reading, Training.</string>
    <string name="easy_ui_cats_minihelp_initial">Assign an initial or an emote to the category. It will be displayed on the notification, where you will be tapping it to start/stop counting time spent on the category of activity - much like a stopwatch button.</string>
    <string name="easy_ui_cats_minihelp_active">If checked, the category\'s initial, as defined above, will appear on the notification as a start/stop button. You can uncheck it to temporarily hide the category from the notification.</string>
    <string name="easy_ui_cats_show_on_notification">Show on notification</string>
    <string name="easy_ui_cats_hint_initial">initial or emoji</string>
    <string name="easy_ui_cats_hint_title">Title of the category</string>
</resources>